<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coderadar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="codeforces">Codeforces</string>
    <string name="hackerrank">Hackerrank</string>
    <string name="topcoder">TopCoder</string>
    <string name="hackerearth">Hackerearth</string>
    <string name="codechef">Codechef</string>
    <string name="urioj">URIOJ</string>
    <string name="unknown">Unknown</string>

    <array name="contest_source">
        <item>@string/codeforces</item>
        <item>@string/hackerrank</item>
        <item>@string/topcoder</item>
        <item>@string/hackerearth</item>
        <item>@string/codechef</item>
        <item>@string/urioj</item>
        <item>@string/unknown</item>
    </array>

    <string name="title_section_running">Running</string>
    <string name="title_section_upcoming">Upcoming</string>
    <string name="title_activity_contest_detail">Contest Detail</string>

    <!-- Action bar related -->
    <string name="action_calendar">Add to Calendar</string>
    <string name="action_browse">Go to website</string>
    <string name="action_filter">Filter</string>
    <string name="action_refresh">Refresh</string>

    <!-- Contest Filter Dialog related -->
    <string name="filter_dialog_title">Filter</string>
    <string name="filter_dialog_ok">Ok</string>
    <string name="filter_dialog_cancel">Cancel</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">coderadar.kayulab.com</string>
    <string name="content_authority">com.kayulab.android.coderadar</string>
    <string name="notification_remider_title">Contest Reminder</string>

    <!-- Preference related -->
    <string name="pref_reminder_title">Reminder</string>
    <string name="pref_reminder_filter_title">Reminder Filter</string>
    <string name="pref_reminder_vibrate">Vibrate</string>

    <string-array name="pref_reminder_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_reminder_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="appwidget_contest_list">Contest List</string>
    <string name="appwidget_contest_list_empty">No contest available</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_contest_list_widget_configure">Widget Options</string>

    <!-- Widget Configure Activity -->
    <string name="configure_status_title">Status</string>
    <string name="configure_activity_today">Today</string>
    <string name="configure_activity_running">Running</string>
    <string name="configure_activity_upcoming">Upcoming</string>

    <string name="configure_contest_source">Contest Source</string>

    <string name="configure_ok_button">Ok</string>
    <string name="configure_cancel_button">Cancel</string>

    <string name="fetching_data">Fetching data from internet</string>
    <string name="sync_error">Error when fetching data. Check your network connection</string>
    <string name="no_contest">No Contest Available</string>

</resources>
